--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body {
     width: 32px;
     display: flex;
     align-items: center;
+    border: 1px solid black;
 }
 
 .BigPicture {
@@ -53,11 +54,9 @@ body {
 #Photo {
     margin: 0 0;
     border: 0 0;
-    border: 1px solid black;
-    position: absolute;
-    left: 0px;
-    width: inherit;
-    heigh: inherit;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
     top: 0px;
     z-index: -1;
 }
@@ -70,5 +69,5 @@ body {
     display: flex;
     border: 1px solid black;
     height: 64px;
-    width: 100%;
+    width: 60%;
 }
